change design pattern of the project
